# exhibition-website-scraper

./: .gitignore  README.md  SPEC.md  pyproject.toml
.github/workflows/: scrape.yml
scraper/: csv_writer.py  listing.py  profile.py  registry.py  run.py
scraper/core/: cache.py  csv_writer.py  jsonld.py  politeness.py  types.py  website_email.py
scraper/sites/: cphi.py  electronica.py  eurotier.py  figlobal.py  spacetechexpo.py
