[project]
name = "exhibition-website-scraper"
version = "0.1.0"
description = "Lead-gen scraper for B2B exhibition exhibitor lists"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.48",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper"]
